# coupeDashboardYocto

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  yocto.sh
Open_Coupe_Lab_MD_EN+IT/: idee.md
Open_Coupe_Lab_MD_EN+IT/EN/: Bylaws.md  GoFundMe_Text_EN.md  Protocol_of_Intent.md
Open_Coupe_Lab_MD_EN+IT/IT/: GoFundMe_Text.md  Protocollo_Intenti.md  Statuto.md
Open_Youngtimer_Lab_MD_EN+IT/IT/: Statuto.md
helper/: apply_readme_update.md  qtcreator_kit_config.md
meta-sa/conf/: layer.conf
meta-sa/conf/templates/default/: bblayers.conf.sample  local.conf.append  local.conf.sample
meta-sa/recipes-core/busybox/: busybox_%.bbappend
meta-sa/recipes-core/images/: sa-image-minimal.bb
meta-sa/recipes-devtools/gnutls/: gnutls_3.8.4.bbappend
meta-sa/recipes-devtools/perl/: perl_5.38.4.bbappend
meta-sa/recipes-graphics/egltest/: egltest.bb
meta-sa/recipes-graphics/egltest/files/: egltest.c
meta-sa/recipes-kernel/linux/: linux-yocto_%.bbappend
meta-sa/recipes-qt/app-qt/: app-qt.bb  app-qt.bbappend
meta-sa/recipes-qt/packagegroups/: packagegroups-sa-qt.bb
meta-sa/recipes-qt/qmllib/: qmllib.bb  qmllib.bbappend
meta-sa/recipes-qt/qt6/: gn-native_git.bbappend  qtbase_git.bbappend  qtdeclarative_git.bbappend  qtpdf_git.bbappend  qtwebengine_git.bbappend
meta-sa/recipes-qt/qtdeclarative/: qtdeclarative_%.bbappend
meta-sa/recipes-qt/sa-graphics/: sa-graphics.bb
meta-sa/recipes-qt/sapp/: sapp.bb  sapp.bbappend
meta-sa/recipes-support/nss/: nss_3.98.bb
sa-graphics/: CMakeLists.txt
sa-graphics/Sa/Graphics/: MyCircularGauge.qml
(+27 files in other folders)
